--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,15 @@ before_script:
   - npm run-script build
 
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN #https://docs.travis-ci.com/user/deployment/pages/
-  keep-history: true
-  target-branch: gh-pages
+  provider: script
+  script: bash .travis_publish
   local-dir: build
+  skip-cleanup: true
+  on:
+    tags: true
+  # github-token: $GITHUB_TOKEN #https://docs.travis-ci.com/user/deployment/pages/
+  # keep-history: true
+  # target-branch: gh-pages
   cache:
     paths:
       - node_modules
