--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ deploy:
   script: bash .travis_publish
   local-dir: build
   skip-cleanup: true
-  on:
-    tags: true
+  # on:
+  #   tags: true
   # github-token: $GITHUB_TOKEN #https://docs.travis-ci.com/user/deployment/pages/
   # keep-history: true
   # target-branch: gh-pages
